--- a/css/styles.less
+++ b/css/styles.less
@@ -350,11 +350,17 @@ dd {
 
 /*  d. semantic presentational elements: http://html5doctor.com/i-b-em-strong-element */
 i { font-style: italic; } /* alternate voice or mood, or otherwise offset from the normal prose; typically italic */
-em { font-style: italic; } /* emphatic and/or linguistic stress */
+em { font-style: italic; font-weight: 700; } /* emphatic and/or linguistic stress */
 b { font-weight: 700; } /* offset from surrounding text with no extra importance; typically bold */
 strong { font-weight: 900; } /* strong importance */
 
 mark { background: hsl(204, 39%, 68%); font-style: normal; font-weight: 400; padding: 0 0.25em; } /* highlighted text */
+h1 mark {
+    font-weight: 900;
+    background: @darkest;
+    color: @txt-blue;
+    padding: 1em 0.25em 1.6666666667em;
+}
 small { font-size: 0.875em; }
 
 
@@ -683,6 +689,9 @@ h1 + .epsilon, .promocopy, #breakdown p {
     padding-bottom: 0; /* if a paragraph is the last element in an article, take away the bottom space to preserve rhythm */ 
 }
 
+naming-files {
+    margin-top: 1.5em;
+}
 
 /*  Mobile layout 
 	240–479 px
