tighten header letter-spacing on tablet layout

--- a/css/styles.less
+++ b/css/styles.less
@@ -808,6 +808,7 @@ naming-files {
     	.masthead {
             .gamma;
             text-transform: none;
+            letter-spacing: -1px;
     	}
     	
     	.kicker {
