--- a/css/styles.less
+++ b/css/styles.less
@@ -77,6 +77,13 @@ html {
         /* NOTE: causes font rendering glitches on Android with escaped unicode characters: http://bricss.net/post/6984374395 */
 }
 
+/* burn the old css box model to the fucking ground: http://paulirish.com/2012/box-sizing-border-box-ftw/ */
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 .baseline { 
     background-image: url(img/gridbg.png);
 }
