kicker left align

--- a/css/styles.less
+++ b/css/styles.less
@@ -537,7 +537,7 @@ header {
 .kicker {
     display: inline-block;
     letter-spacing: normal;
-    text-align: justify;
+    text-align: left;
     text-rendering: optimizeLegibility;
     text-indent: 0;
 }
