--- a/css/styles.css
+++ b/css/styles.css
@@ -755,7 +755,7 @@ header {
 .kicker {
   display: inline-block;
   letter-spacing: normal;
-  text-align: justify;
+  text-align: left;
   text-rendering: optimizeLegibility;
   text-indent: 0;
 }
