updated repo name, checking for screwup

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,20 @@
 /*
  * Web-Craft Primer v1.0
  ============================================================
+ *    url: http://webcraft.zacharykain.com
  *    src: http://github.com/zakkain/webcraft
  *    
- *    author: Zachary Kain (@zakkain)
+ *    author: @zakkain
  *    license: this work is in the public domain
  *                http://creativecommons.org/publicdomain/zero/1.0
  *    
- *    elements of this work were first published by:
+ *    elements of this stylesheet were first published by:
  *       Paul Irish, Divya Manian, Nicolas Gallagher, 
  *       Mathias Bynens, Shi Chuan, Harry Roberts,
  *       Lea Verou, Joni Korpi, Tim Brown, and many others. 
  *       
- *       attribution and/or src links are supplied inline.
+ *    this stylesheet was written with the utmost care and
+ *    dedication given to proper attribution and sourcing.
  ============================================================
 */
 
