--- a/css/style.css
+++ b/css/style.css
@@ -858,8 +858,8 @@ input.search {
    width: 14%;
    background-color: #aaa;
    text-transform: uppercase;
-   font-size: 14px;
-   line-height: 1.714285714;
+   /*font-size: 14px;*/
+   /*line-height: 1.714285714;*/
 }
 label[for="textarea"], label[for="select"] {
    margin-bottom: 0.75rem;
